--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -468,9 +468,9 @@ on post-fs-data
 
     setprop vold.post_fs_data_done 1
 
-service vendor.charger /charger
+service vendor.charger /system/bin/charger
     class charger
-    group log
+    group system graphics
     seclabel u:r:charger:s0
     disabled
 
