Import and bind mount loader config for media swcodec.
 * This config needs to be modified for legacy devices. As
   there is no easy way to split it, import it into device
   tree and bind mount it instead.

 * Head at android-10.0.0_r14.

Change-Id: I8d5003d7cd3a471c569844aede4b5ea4c68ae36b

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -932,3 +932,6 @@ on property:service.bootanim.exit=1
 
     # Set perfd properties
     setprop vendor.post_boot.parsed 1
+
+on property:apexd.status=ready
+    mount none /system/etc/swcodec/ld.config.txt /apex/com.android.media.swcodec/etc/ld.config.txt bind
