convert to potter
Change-Id: I01898d5ef40eaecb0a9779a92840b512f952097c

--- a/sensors/android.hardware.sensors@1.0-service.potter.rc
+++ b/sensors/android.hardware.sensors@1.0-service.potter.rc
@@ -1,4 +1,4 @@
-service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service.legacy
+service vendor.sensors-hal-1-0 /system/vendor/bin/hw/android.hardware.sensors@1.0-service.potter
     interface android.hardware.sensors@1.0::ISensors default
     class hal
     user system
